# knope

./: .vale.ini  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INTEGRATION_TESTS.md  LICENSE  Makefile  Makefile.toml  README.md  clippy.toml  deny.toml  dobby.toml  flow.toml  implementation.md  justfile  knope.toml  mise.toml  pr.md  rust-toolchain.toml  taplo.toml
crates/knope/: Cargo.toml
crates/knope-config/: CHANGELOG.md  Cargo.toml
crates/knope-config/src/: changelog_section.rs  lib.rs  package.rs  release_notes.rs  template.rs
crates/knope-versioned-files/: Cargo.toml
crates/knope-versioning/: CHANGELOG.md  Cargo.toml  README.md
crates/knope-versioning/src/: action.rs  cargo.rs  go_mod.rs  jsonc.rs  lib.rs  package.rs  package_json.rs  pubspec.rs  pyproject.rs  semver.rs  versioned_file.rs
crates/knope-versioning/src/changelog/: mod.rs
crates/knope-versioning/src/changes/: changeset.rs  conventional_commit.rs  mod.rs
crates/knope-versioning/src/release_notes/: changelog.rs  config.rs  mod.rs  release.rs
crates/knope-versioning/src/semver/: mod.rs  package_versions.rs  prerelease_map.rs  rule.rs
crates/knope-versioning/src/versioned_file/: cargo.rs  cargo_lock.rs  deno_json.rs  deno_lock.rs  gleam.rs  go_mod.rs  maven_pom.rs  mod.rs  package_json.rs  package_lock_json.rs  pubspec.rs  pyproject.rs  regex_file.rs  tauri_conf_json.rs  text_file.rs
crates/knope/src/: app_config.rs  dry_run.rs  fs.rs  lib.rs  main.rs  prompt.rs  state.rs  variables.rs  workflow.rs
crates/knope/src/config/: mod.rs  package.rs  toml.rs
crates/knope/src/config/toml/: config.rs  mod.rs  package.rs
crates/knope/src/integrations/: git.rs  http.rs  mod.rs
crates/knope/src/integrations/gitea/: create_pull_request.rs  create_release.rs  list_issues.rs  mod.rs
crates/knope/src/integrations/github/: create_pull_request.rs  create_release.rs  mod.rs  pr_info.rs
crates/knope/src/step/: command.rs  confirm.rs  create_change_file.rs  create_pull_request.rs  mod.rs
crates/knope/src/step/issues/: gitea.rs  github.rs  jira.rs
crates/knope/src/step/releases/: cargo.rs  changelog.rs  changesets.rs  conventional_commits.rs  gitea.rs  github.rs  go.rs  internal_deps.rs  mod.rs  package.rs  package_json.rs  pubspec_yaml.rs  pyproject.rs  semver.rs  versioned_file.rs  workspace.rs
crates/knope/tests/: integration.rs  integration_helpers.rs  main.rs
crates/knope/tests/bump_version/: mod.rs
crates/knope/tests/bump_version/single_package/: mod.rs
crates/knope/tests/bump_version/text_file/: mod.rs
crates/knope/tests/command/: mod.rs
crates/knope/tests/command/replace_version/: mod.rs
crates/knope/tests/command/shell/: mod.rs
crates/knope/tests/create_pull_requests/: mod.rs
crates/knope/tests/create_pull_requests/disable_default_variables/: mod.rs
crates/knope/tests/default_workflows/: mod.rs
crates/knope/tests/default_workflows/cargo_workspace/: mod.rs
crates/knope/tests/default_workflows/document_change/: mod.rs
crates/knope/tests/default_workflows/get_version/: mod.rs
crates/knope/tests/default_workflows/release/: mod.rs
crates/knope/tests/generate/: mod.rs
crates/knope/tests/generate/cargo_workspace/: mod.rs
crates/knope/tests/generate/gitea/: mod.rs
crates/knope/tests/generate/packages_with_changelog/: mod.rs
crates/knope/tests/git_release/: mod.rs
crates/knope/tests/git_release/single_package/: mod.rs
crates/knope/tests/git_release/split_workflow/: mod.rs
crates/knope/tests/gitea_release/no_previous_tag/: mod.rs
crates/knope/tests/gitea_release/release_assets/: mod.rs
crates/knope/tests/github_release/: mod.rs
crates/knope/tests/github_release/multiple_packages/: mod.rs
crates/knope/tests/github_release/no_previous_tag/: mod.rs
crates/knope/tests/github_release/release_assets/: mod.rs
crates/knope/tests/helpers/: assert.rs  files.rs  git.rs  mod.rs  test_case.rs
crates/knope/tests/integration_gitea/: mod.rs
crates/knope/tests/integration_github/: mod.rs
crates/knope/tests/no_config/: mod.rs
crates/knope/tests/no_config/no_remote/: mod.rs
crates/knope/tests/prepare_release/: mod.rs
crates/knope/tests/prepare_release/branching_history/: mod.rs
crates/knope/tests/prepare_release/cargo/: mod.rs
crates/knope/tests/prepare_release/cargo_workspace/: mod.rs
crates/knope/tests/prepare_release/changesets/: mod.rs
crates/knope/tests/prepare_release/custom_change_entries/: mod.rs
crates/knope/tests/prepare_release/deno/: mod.rs
crates/knope/tests/prepare_release/enable_prerelease/: mod.rs
crates/knope/tests/prepare_release/hande_pre_versions_that_are_too_new/: mod.rs
crates/knope/tests/prepare_release/ignore_conventional_commits/: mod.rs
crates/knope/tests/prepare_release/multiple_packages/: mod.rs
crates/knope/tests/prepare_release/no_version_change/: mod.rs
crates/knope/tests/prepare_release/no_versioned_files/: mod.rs
crates/knope/tests/prepare_release/npm/: mod.rs
crates/knope/tests/prepare_release/override_prerelease_label/: mod.rs
crates/knope/tests/prepare_release/override_version/: mod.rs
crates/knope/tests/prepare_release/override_version_multiple_packages/: mod.rs
crates/knope/tests/prepare_release/package_json_dependencies/: mod.rs
crates/knope/tests/prepare_release/prerelease_after_release/: mod.rs
crates/knope/tests/prepare_release/pyproject_toml/: mod.rs
crates/knope/tests/prepare_release/readme_version/: mod.rs
crates/knope/tests/prepare_release/release_after_prerelease/: mod.rs
crates/knope/tests/prepare_release/scopes/: mod.rs
crates/knope/tests/prepare_release/second_prerelease_after_distinct_stable/: mod.rs
crates/knope/tests/prepare_release/tauri_conf_json/: mod.rs
crates/knope/tests/prepare_release/verbose/: mod.rs
crates/knope/tests/upgrade/: mod.rs
crates/knope/tests/upgrade/ignore_conventional_commits/: mod.rs
crates/knope/tests/validate/: mod.rs
crates/knope/tests/validate/kitchen_sink/: mod.rs
crates/knope/tests/validate/multiple_package_formats/: mod.rs
crates/knope/tests/validate/unsupported_dependency/: mod.rs
src/: cargo.rs  (+19 more)
(+906 files in other folders)
