[workspace]
resolver = "2"
default-members = ["crates/knope"]
members = ["crates/knope-config", "crates/knope-versioning", "crates/knope"]

[profile.release]
strip = true

[workspace.dependencies]
changesets = "0.4.0"
indexmap = { version = "2", features = ["serde"] }
itertools = "0.14.0"
knope-versioning = { path = "crates/knope-versioning", version = "0.5.2" }
miette = "7.2.0"
relative-path = { version = "2.0.0", features = ["serde"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
thiserror = "2.0.0"
toml = { version = "0.9.0", features = ["preserve_order"] }
toml_edit = "0.23.0"
tracing = "0.1.40"
xmltree = "0.11.0"
xml-rs = "0.8.25"

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# cargo-deny handles this
multiple_crate_versions = "allow"

# Don't panic!
panic = "deny"
exit = "deny"
unimplemented = "deny"
todo = "deny"
expect_used = "deny"
unwrap_used = "deny"
indexing_slicing = "deny"
missing_panics_doc = "forbid"

# Use `tracing`, not print
print_stdout = "deny"
print_stderr = "deny"
