[workspace]
resolver = "2"
default-members = ["crates/knope"]
members = ["crates/knope-config", "crates/knope-versioning", "crates/knope"]

[profile.release]
strip = true

[workspace.dependencies]
changesets = "0.4.0"
deno_config = "0.71.0"
deno_semver = "0.9.0"
indexmap = { version = "2", features = ["serde"] }
itertools = "0.14.0"
knope-versioning = { path = "crates/knope-versioning", version = "0.6.1" }
miette = "7.2.0"
regex = "1.11.0"
relative-path = { version = "2.0.0", features = ["serde"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
thiserror = "2.0.0"
toml = { version = "0.9.0", features = ["preserve_order"] }
toml_edit = "0.24.0"
tracing = "0.1.40"
xmltree = "0.12.0"
xml-rs = "1.0.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_assignments = "allow" # Workaround for https://github.com/rust-lang/rust/issues/147648

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# cargo-deny handles this
multiple_crate_versions = "allow"

# Don't panic!
panic = "deny"
exit = "deny"
unimplemented = "deny"
todo = "deny"
expect_used = "deny"
unwrap_used = "deny"
indexing_slicing = "deny"
missing_panics_doc = "forbid"

# Use `tracing`, not print
print_stdout = "deny"
print_stderr = "deny"
