[package]
name = "knope-config"
description = "A library for handling common configuration of Knope"
version = "0.0.1"
authors = ["Dylan Anthony <contact@dylananthony.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/knope-dev/knope"
rust-version = "1.71.1"
readme = "README.md"

[dependencies]
knope-versioning = { path = "../knope-versioning", version = "0.0.1" }
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
