[package]
name = "knope-config"
description = "A library for handling common configuration of Knope"
version = "0.2.2"
authors = ["Dylan Anthony <contact@dylananthony.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/knope-dev/knope"
rust-version = "1.85.0"
readme = "README.md"

[dependencies]
indexmap.workspace = true
knope-versioning = { workspace = true }
relative-path = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
