[package]
name = "knope-versioning"
description = "A library for handling all the versioned files supported by Knope"
version = "0.0.1"
authors = ["Dylan Anthony <contact@dylananthony.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/knope-dev/knope"
rust-version = "1.71.1"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
changesets = "0.2.4"
git-conventional = "0.12.6"
itertools = "0.13.0"
miette = { version = "7.2.0", optional = true }
relative-path = { version = "1.9.3", features = ["serde"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
thiserror = "1.0.59"
toml = "0.8.12"

[dev-dependencies]
pretty_assertions = "1.4.0"

[lints]
workspace = true
