[package]
name = "knope-versioning"
description = "A library for handling all the versioned files supported by Knope"
version = "0.3.2"
authors = ["Dylan Anthony <contact@dylananthony.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/knope-dev/knope"
rust-version = "1.85.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
changesets = { workspace = true }
git-conventional = "0.12.6"
itertools = { workspace = true }
miette = { workspace = true, optional = true }
relative-path = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3.36", features = ["formatting", "macros", "parsing"] }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
xmltree = { workspace = true, features = ["attribute-order"] }
xml-rs = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.0"

[lints]
workspace = true
