[package]
name = "knope"
description = "A command line tool for automating common development tasks"
version = "0.16.2"
authors = ["Dylan Anthony <contact@dylananthony.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/knope-dev/knope"
homepage = "https://knope.tech"
documentation = "https://knope.tech"
keywords = ["semantic-version", "changelog", "changeset", "git", "github"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.71.1"
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
changesets = {workspace = true}
clap = { version = "4.5.4", features = ["cargo", "string", "env"] }
datta = "0.1.1"
env_logger = "0.11.3"
execute = "0.2.13"
git2 = { version = "0.18.3", default-features = false }
gix = { version = "0.63.0", default-features = false, features = [
  "max-performance-safe",
] }
indexmap = { version = "2.2.6", features = ["serde"] }
inquire = { version = "0.7.5", default-features = false, features = [
  "crossterm",
] }
itertools = { workspace = true }
knope-config = { path = "../knope-config", version = "0.0.1"}
knope-versioning = { path = "../knope-versioning", version = "0.0.1", features = [
  "miette",
] }
log = "0.4.21"
miette = { workspace = true, features = ["fancy"] }
platform-dirs = "0.3.0"
relative-path = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3.36" }
toml = { workspace = true }
ureq = { version = "2.9.6", features = ["json"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
snapbox = { version = "0.6.0", features = ["path"] }
tempfile = "3.10.1"

[lints]
workspace = true
