[package]
name = "knope"
description = "A command line tool for automating common development tasks"
version = "0.21.0"
authors = ["Dylan Anthony <contact@dylananthony.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/knope-dev/knope"
homepage = "https://knope.tech"
documentation = "https://knope.tech"
keywords = ["semantic-version", "changelog", "changeset", "git", "github"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85.0"
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
changesets = { workspace = true }
clap = { version = "4.5.4", features = ["cargo", "string", "env"] }
datta = "0.1.1"
dirs = "6.0.0"
execute = "0.2.13"
git2 = { version = "0.20.0", default-features = false }
glob = "0.3.1"
indexmap = { workspace = true }
inquire = { version = "0.7.5", default-features = false, features = [
  "crossterm",
] }
itertools = { workspace = true }
knope-config = { path = "../knope-config", version = "0.2.4" }
knope-versioning = { workspace = true, features = ["miette"] }
miette = { workspace = true, features = ["fancy"] }
relative-path = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
  "fmt",
] }
ureq = { version = "2.9.6", features = ["json"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
snapbox = { version = "0.6.0", features = ["path"] }
tempfile = "3.10.1"
time = { version = "0.3.36" }

[lints]
workspace = true
